--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -5,6 +5,8 @@
 %  secondspecimen	For 2nd specimen exam
 %  showsolutions		Produces solution booklet
 %  specimensolutions SSEP ("specimen,showsolutions" achieves the same)
+%  qp-and-ss      Builds QP and solutions in separate
+%                   PDFs from single compilation.
 % See documentation for other options, usage, etc.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
