--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -1,4 +1,4 @@
-\documentclass[]{outn}
+\documentclass{outn}
 % Options:
 %   specsolns    - mode that produces output with marks, solnmarksplus,
 %                  and remarks suppressed, and text in green.
@@ -204,7 +204,7 @@ Emulate the OUTeX intertext command using the (built-in) enumitem command.
     For example,
     \begin{itemize}
       \item default behaviour
-        
+       
         \total{1}
       \item \verb!\setTotalHline[moveleft=10pt]!
         \setTotalHline[moveleft=10pt]
@@ -254,22 +254,20 @@ And then you can overwrite certain aspects as you see fit, for example \verb!\ou
 
 \question{4}
 \begin{enumerate}
-  \item The \verb|\tutoronly| command \emph{only} produces output in the tutor version of the tutor notes, 
-    and is ignored when the \verb|specsolns| option is used. For example
-    \tutoronly{ {\color{blue} students will not see this!}}.
+  \item The \verb|\tnonly| command \emph{only} produces output in the tutor version of the tutor notes, 
+    and is ignored when the \verb|specsolns| option is used. For example%
+    \tnonly{ {\color{blue} students will not see this!}}.
   \item The \verb|tutor| environment is only visible in tutor notes, 
-    and is ignored when the \verb|specsolns| option is used. For example
+    and is ignored when the \verb|specsolns| option is used. For example:
 
     \begin{tutor}
       This environment will only be seen in the tutor notes.
 
       It will not be seen in the student version.
     \end{tutor}
-    \tutoronly{\pagebreak}
-  \item The \verb|\studentonly| command \emph{only} produces output in the 
-    special solutions version of tutor notes (so \verb|specsolns| must be active); for example \studentonly{this is only output in student solutions}
+    \tnpagebreak
+  \item The \verb|\ssonly| command \emph{only} produces output when \verb|specsolns| is active; for example \ssonly{this is only output in student solutions}
   \item The \verb|student| environment is only visible in student solutions, 
-    \studentonly{\pagebreak}
     when the \verb|specsolns| option is used. For example
 
     \begin{student}
@@ -277,9 +275,10 @@ And then you can overwrite certain aspects as you see fit, for example \verb!\ou
 
       It will not be seen in the tutor notes.
     \end{student}
-  \item The \verb|\tutororstudent| takes two parameters, the first will only be seen in the tutor version (when \verb|specsolns|
+    \sspagebreak
+  \item The \verb|\tnorss| takes two parameters, the first will only be seen in the tutor version (when \verb|specsolns|
     is not active), the second will only be seen by students in the student version (when \verb|specsolns| is active).
-    For example: \tutororstudent{for tutors!}{for students!}
+    For example: \tnorss{for tutors!}{for students!}
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
